Checking if button overlapping with footer is resolved or not

--- a/src/assets/css/studentRegister.css
+++ b/src/assets/css/studentRegister.css
@@ -335,6 +335,8 @@ option {
   }
   #student-signup {
     background-image: none;
+    height: auto;
+    margin-bottom: 10vh;
   }
   .progressbar {
     width: 70vw;
